# tgf

./: .env.example  .gitignore  Makefile  README.md  config.toml.example  diagnose.py  main.py  pyproject.toml  requirements.txt  telegram-aggregator.service  telegram_feed
db/: storage.py
handlers/: message.py
utils/: folder.py  formatter.py
