[project]
name = "telegram-feed"
version = "0.1.0"
description = "Telegram feed"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "click>=8.3.1",
    "cryptg>=0.5.2",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "telethon>=1.42.0",
    "tomli-w>=1.2.0",
]
